# Perro

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DRAW_METHOD_IMPLEMENTATION.md  PROFILING.md  README.md  agents.md  debug_atlas.raw  install-deps.sh  legacy_app.rs  legacy_runtime.rs  project.toml
.perro/dev_runner/: Cargo.toml  build.rs
.perro/dev_runner/src/: main.rs
.perro/project/: Cargo.toml
.perro/project/src/: main.rs
.perro/scripts/: Cargo.toml
.perro/scripts/src/: lib.rs
joycon/: Cargo.toml  README.md
joycon/examples/: example.rs
joycon/src/: calibration.rs  error.rs  input_report.rs  joycon.rs  joycon2.rs  lib.rs
perro_app/: Cargo.toml
perro_app/src/: entry.rs  lib.rs  winit_runner.rs
perro_core/: Cargo.toml  build.rs
perro_core/.cargo/: config.toml
perro_core/docs/nodes/: Node.xml  Node2D.xml  Sprite2D.xml
perro_core/src/: globals.rs  ids.rs  lib.rs  main.rs  node_arena.rs  project.rs  project_creator.rs  runtime.rs  scene.rs  thread_utils.rs  time_util.rs  types.rs  uid32.rs
perro_core/src/brk/: archive.rs  mod.rs  packer.rs
perro_core/src/input/: manager.rs  mod.rs
perro_core/src/input/joycon/: calibration.rs  error.rs  input_report.rs  joycon.rs  joycon2.rs  manager.rs  mod.rs  state.rs
perro_core/src/nodes/: mod.rs  node.rs  node_registry.rs  scene_node.rs
perro_core/src/nodes/_2d/: area_2d.rs  camera_2d.rs  collision_shape_2d.rs  mod.rs  node2d.rs  node_2d.rs  shape_2d.rs  shape_instance_2d.rs  sprite2d.rs  sprite_2d.rs
perro_core/src/nodes/_3d/: camera_3d.rs  light_dir_3d.rs  light_omni_3d.rs  light_spot_3d.rs  mesh_instance_3d.rs  mod.rs  node_3d.rs
perro_core/src/nodes/node_2d/: camera_2d.rs  mod.rs  node_2d.rs  sprite_2d.rs
perro_core/src/nodes/node_3d/: ambient_light_3d.rs  camera_3d.rs  mesh_instance_3d.rs  mod.rs  node_3d.rs  node_3d_base.rs  point_light_3d.rs  ray_light_3d.rs  spot_light_3d.rs
perro_core/src/nodes/ui/: apply_fur.rs  ast.rs  egui_bridge.rs  egui_integration.rs  fur_ast.rs  lexer.rs  mod.rs  parse_fur.rs  parser.rs  text_utils.rs  ui_calculate.rs  ui_element.rs  ui_file_tree_manager.rs  ui_list_tree_manager.rs  ui_node.rs  ui_registry.rs  ui_renderer.rs
perro_core/src/physics/: mod.rs  physics_2d.rs
perro_core/src/project/: asset_io.rs  manifest.rs  mod.rs  uid_integration.rs  uid_registry.rs
perro_core/src/rendering/: app.rs  font.rs  frustum.rs  graphics.rs  image_loader.rs  mesh_loader.rs  mod.rs  native_glyph_cache.rs  renderer_2d.rs  renderer_3d.rs  renderer_prim.rs  renderer_ui.rs  static_mesh.rs  text_renderer.rs  vertex.rs
perro_core/src/rendering/shaders/: basic3d.wgsl  color_font_instanced.wgsl  color_quad.wgsl  font_instanced.wgsl  minimal.wgsl  rect_instanced.wgsl  sprite_instanced.wgsl  texture_shader.wgsl
perro_core/src/scripting/: api.rs  api_bindings.rs  api_modules.rs  app_command.rs  ast.rs  call_modules.rs  codegen.rs  compiler.rs  mod.rs  node_api_common.rs  registry.rs  resource_bindings.rs  resource_modules.rs  script.rs  source_map.rs  source_map_runtime.rs  source_span.rs  transpiler.rs
perro_core/src/scripting/codegen/: analysis.rs  boilerplate.rs  cache.rs  expression.rs  file_io.rs  function.rs  literal.rs  mod.rs  operator.rs  script.rs  statement.rs  struct_def.rs  type_inference.rs  utils.rs
perro_core/src/scripting/lang/: api_bindings.rs  api_modules.rs  ast.rs  ast_modules.rs  codegen.rs  mod.rs  transpiler.rs
perro_core/src/structs/: color.rs  engine_bindings.rs  engine_registry.rs  engine_structs.rs  mod.rs  scene_ref.rs  script_ui_registry.rs  ui_bindings.rs
perro_core/src/structs/structs2d/: color.rs  mod.rs  rect.rs  shape_2d.rs  shape_type_2d.rs  texture.rs  transform2d.rs  (+2 more)
perro_core/src/structs2d/: color.rs  texture.rs  transform2d.rs  vector2.rs
perro_dev/: Cargo.toml  build.rs
perro_dev/src/: main.rs
perro_editor/.perro/project/: Cargo.toml  build.rs
perro_game/: Cargo.toml
perro_game/src/: main.rs
perro_graphics/: Cargo.toml
perro_graphics/src/: backend.rs  gpu.rs  lib.rs  renderer_2d.rs  resources.rs
perro_graphics/src/three_d/: gpu.rs  renderer.rs  shaders.rs
perro_graphics/src/two_d/: gpu.rs  renderer.rs
perro_lsp/: Cargo.toml  README.md
perro_lsp/src/: completion.rs  diagnostics.rs  hover.rs  lib.rs  main.rs  server.rs  types.rs
perro_manager/: Cargo.toml
perro_manager/src/: main.rs
perro_runtime/: Cargo.toml
perro_runtime/src/: lib.rs  main.rs  node_arena.rs  resource_api.rs  runtime.rs  runtime_project.rs  script_collection.rs  signal_registry.rs
perro_runtime/src/api/: mod.rs  nodes.rs  scripts.rs  signals.rs  time.rs
perro_runtime/src/cns/: mod.rs  script_collection.rs  scripts.rs  signal_registry.rs
perro_runtime/src/rs_ctx/: core.rs  material.rs  mesh.rs  state.rs  texture.rs
perro_runtime/src/rt_ctx/: mod.rs  nodes.rs  signals.rs
perro_runtime/src/runtime/: render_2d.rs  render_3d.rs  scene_loader.rs
perro_rust/: Cargo.toml
perro_rust/src/: bob.rs  chicken.rs  jump.rs  lib.rs  pup.rs
perro_source/api_modules/perro_api/: Cargo.toml
perro_source/api_modules/perro_jobs/: Cargo.toml
perro_source/api_modules/perro_modules/: Cargo.toml
perro_source/api_modules/perro_networking/: Cargo.toml
perro_source/api_modules/perro_resource_api/: Cargo.toml
perro_source/api_modules/perro_runtime_api/: Cargo.toml
perro_source/api_modules/perro_web/: Cargo.toml
perro_source/audio_stack/perro_pawdio/: Cargo.toml
perro_source/build_pipeline/perro_compiler/: Cargo.toml
perro_source/build_pipeline/perro_static_pipeline/: Cargo.toml
perro_source/core/perro_structs/: Cargo.toml
perro_source/devtools/perro_cli/: Cargo.toml
perro_source/devtools/perro_dev_runner/: Cargo.toml
perro_source/io_stack/perro_io/: Cargo.toml  build.rs
perro_website/: Cargo.toml  README.md  build.rs  index.html
perro_website/scripts/: sync_demos.ps1
perro_website/src/: docs.rs  highlight.rs  layout.rs  lib.rs  main.rs  shared.rs
perro_website/src/pages/: docs.rs  examples.rs  home.rs  mod.rs  nodes.rs  sponsor.rs  static_pages.rs
perro_website/style/: main.css
(+1951 files in other folders)
