[workspace]
members = [
    "perro_source/core/perro_ids",
    "perro_source/core/perro_animation",
    "perro_source/core/perro_nodes",
    "perro_source/core/perro_structs",
    "perro_source/core/perro_variant",
    "perro_source/core/perro_particle_math",

    "perro_source/runtime_project/perro_runtime",
    "perro_source/runtime_project/perro_internal_updates",
    "perro_source/runtime_project/perro_scene",
    "perro_source/runtime_project/perro_project",

    "perro_source/api_modules/perro_modules",
    "perro_source/api_modules/perro_input",
    "perro_source/api_modules/perro_api",
    "perro_source/api_modules/perro_resource_context",
    "perro_source/api_modules/perro_runtime_context",

    "perro_source/render_stack/perro_app",
    "perro_source/render_stack/perro_graphics",
    "perro_source/render_stack/perro_meshlets",
    "perro_source/render_stack/perro_render_bridge",

    "perro_source/script_stack/perro_scripting",
    "perro_source/script_stack/perro_scripting_macros",
    "perro_source/render_stack/perro_macros",

    "perro_source/build_pipeline/perro_compiler",
    "perro_source/build_pipeline/perro_static_pipeline",

    "perro_source/io_stack/perro_assets",
    "perro_source/io_stack/perro_io",
    "perro_source/audio_stack/perro_bark",

    "perro_source/devtools/perro_cli",
    "perro_source/devtools/perro_dev_runner",
]

resolver = "3"

[patch.crates-io]
perro_nodes = {path = "perro_source/core/perro_nodes"}
perro_structs = {path = "perro_source/core/perro_structs"}
perro_ids = {path = "perro_source/core/perro_ids"}
perro_animation = {path = "perro_source/core/perro_animation"}
perro_variant = {path="perro_source/core/perro_variant"}
perro_particle_math = {path = "perro_source/core/perro_particle_math"}

perro_runtime = {path="perro_source/runtime_project/perro_runtime"}
perro_internal_updates = {path="perro_source/runtime_project/perro_internal_updates"}
perro_scene = {path = "perro_source/runtime_project/perro_scene"}
perro_project = {path="perro_source/runtime_project/perro_project"}

perro_runtime_context = {path = "perro_source/api_modules/perro_runtime_context"}
perro_modules = {path="perro_source/api_modules/perro_modules"}
perro_input = {path="perro_source/api_modules/perro_input"}
perro_api = {path="perro_source/api_modules/perro_api"}
perro_resource_context = {path="perro_source/api_modules/perro_resource_context"}

perro_app = {path="perro_source/render_stack/perro_app"}
perro_render_bridge = {path="perro_source/render_stack/perro_render_bridge"}
perro_graphics = {path="perro_source/render_stack/perro_graphics"}
perro_meshlets = {path="perro_source/render_stack/perro_meshlets"}
perro_scripting = {path="perro_source/script_stack/perro_scripting"}
perro_scripting_macros = {path="perro_source/script_stack/perro_scripting_macros"}

perro_compiler = {path="perro_source/build_pipeline/perro_compiler"}
perro_static_pipeline = {path="perro_source/build_pipeline/perro_static_pipeline"}

perro_io = {path = "perro_source/io_stack/perro_io"}
perro_assets = {path = "perro_source/io_stack/perro_assets"}
perro_bark = {path = "perro_source/audio_stack/perro_bark"}

perro_cli = {path="perro_source/devtools/perro_cli"}
perro_dev_runner = {path="perro_source/devtools/perro_dev_runner"}

[profile.release.package.rapier2d]
opt-level = 3

[profile.release.package.rapier3d]
opt-level = 3

[profile.release]
opt-level = 2
lto = "none"
codegen-units = 64
panic = "abort"
strip = "symbols"
incremental = true
debug = false
debug-assertions = false
overflow-checks = false
