[package]
name = "joycon"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "An open-source cross-platform Rust library for interfacing with Nintendo Switch Joy-Con controllers (Joy-Con 1 and Joy-Con 2)"
license = "MIT"
repository = "https://github.com/yourusername/joycon"
readme = "README.md"

[lib]
name = "joycon"
path = "src/lib.rs"


[dependencies]
# HID support for Joy-Con 1
hidapi = "2.0"

# BLE support for Joy-Con 2
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = "1.0"

