[package]
name = "perro_core"
version = "0.1.0"
edition = "2024"

[lib]
name = "perro_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
bincode = "1.3"

# Parsing
tree-sitter = "0.25.10"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-typescript = "0.23.2"

# Graphics & GPU
winit = { version = "0.30.8" }
wgpu = { version = "24.0.1"}
pollster = {version ="0.4.0"}
bytemuck = "1.10"
glam = "0.26"
image = "0.24"
ab_glyph = "0.2"
guillotiere = "0.6"
fontdue = "0.8"
swash = "0.1"

# Logging
log = { version = "0.4.22"}
env_logger = {version = "0.11.5"}

# Error handling
anyhow = "1"
eyre = "0.6"

# Utilities
rand = "0.8"
rayon = "1.8"
phf = { version = "0.13.1", features = ["macros"] }
rustc-hash = "2.0"
uuid = { version = "1.4", features = ["serde", "v4", "v5"] }
enum_dispatch = "0.3"
indexmap = { version = "1.9", features = ["serde", "rayon"] }
once_cell = "1.19"
smallvec = "1.11"

# File system
dunce = "1.0.5"
dirs = "5.0"
walkdir = "2.5"
memmap2 = "0.9"

# File formats
toml = "0.8"
zip = "0.6"
zstd = { version = "0.13", features = ["zstdmt"] }

# Cryptography
aes-gcm = "0.10"

# Time & Text processing
chrono = "*"
regex = "*"

# Dynamic loading
libloading = "0.8"
