[package]
name = "perro_core"
version = "0.1.0"
edition = "2024"
description = "Core library for the Perro game engine, used for compiling scripts and projects"
license = "Apache-2.0"
authors = ["Perro Engine Contributors"]
repository = "https://github.com/PerroEngine/Perro.git"
keywords = ["game-engine", "game-development", "rust", "rendering", "scripting"]
categories = ["game-development", "graphics"]


[lib]
name = "perro_core"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
bincode = "1.3"

# Parsing
tree-sitter = "0.25.10"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-typescript = "0.23.2"

# Graphics & GPU
winit = "0.30.12"
wgpu = { version = "27.0.1" }


pollster = {version ="0.4.0"}
bytemuck = "1.10"
glam = "0.26"
image = "0.24"
png = "0.17"
jpeg-decoder = "0.3"
egui = "0.33.3"
egui-wgpu = "0.33.3"

# Logging
log = { version = "0.4.22"}
env_logger = {version = "0.11.5"}

# Error handling
anyhow = "1"
eyre = "0.6"

# Utilities
rand = "0.8"
rayon = "1.8"
phf = { version = "0.13.1", features = ["macros"] }
rustc-hash = "2.0"
uuid = { version = "1.4", features = ["serde", "v4", "v5"] }  # Only for btleplug GATT characteristics
enum_dispatch = "0.3"
indexmap = { version = "1.9", features = ["serde", "rayon"] }
once_cell = "1.19"
smallvec = "1.11"
arboard = "3.4"

# File system
dunce = "1.0.5"
dirs = "5.0"
walkdir = "2.5"
memmap2 = "0.9"

# File formats
toml = "0.8"
zip = "0.6"
zstd = { version = "0.13", features = ["zstdmt"] }
gltf = "1.4"

# Cryptography
aes-gcm = "0.10"
sha2 = "0.10"

# Time & Text processing
chrono = "0.4"
regex = "1"
unicode-segmentation = "1"
fontdue = "0.7"

# Dynamic loading
libloading = "0.8.6"

# Controller input (HID and BLE)
hidapi = "2.6.3"
btleplug = "0.11.8"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
thiserror = "1.0"

# Physics
rapier2d = "0.12"
rapier3d = "0.12"

# Platform-specific APIs for thread naming
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "libloaderapi", "winerror"] }

[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies]
libc = "0.2"

# Profiling (optional, enabled with "profiling" feature)
[features]
profiling = ["tracing", "tracing-subscriber", "tracing-flame", "inferno"]

[dependencies.tracing]
version = "0.1"
optional = true

[dependencies.tracing-subscriber]
version = "0.3"
features = ["fmt"]
optional = true

[dependencies.tracing-flame]
version = "0.2"
optional = true

[dependencies.inferno]
version = "0.12"
optional = true

# Optimized release profile for library crate
[profile.release]
opt-level = 3            # max speed
lto = "thin"             # thin LTO for libraries (final binary handles full LTO)
codegen-units = 1        # full cross-crate optimization
debug = false            # no debug info
incremental = false      # disable incremental compilation for better optimization
overflow-checks = false  # disable overflow checks for performance
