[package]
name = "perro_game"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_core = { path = "../perro_core" }
winit = { version = "0.30.8" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
pollster = {version ="0.4.0"}
uuid = { version = "1.4", features = ["serde", "v4"] }

[profile.hotreload]
inherits = "dev"
opt-level = 0
incremental = true
codegen-units = 64
lto = false
debug = false
strip = "debuginfo"
overflow-checks = false