[package]
name = "perro_game"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_core = { path = "../perro_core" }
winit = { version = "0.30.8" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
pollster = {version ="0.4.0"}
uuid = { version = "1.4", features = ["serde", "v4"] }

toml = "0.8"