[package]
name = "perro_graphics"
version = "0.1.0"
edition = "2024"

[dependencies]
wgpu = { version = "28.0.0", default-features = false, features = ["std", "vulkan", "dx12", "metal", "wgsl"] }
bytemuck = { version = "1.24.0", features = ["derive"] }
pollster = "0.4.0"
winit = "0.30.12"

perro_ids = "0.1.0"
perro_render_bridge = "0.1.0"

