[package]
name = "perro_lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
# LSP server
tower-lsp = "0.20"
lsp-types = "0.94"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Reuse existing parser logic
perro_core = { path = "../perro_core" }

# Utilities
anyhow = "1.0"
thiserror = "1.0"
url = "2.5"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }

[lib]
name = "perro_lsp"
path = "src/lib.rs"

[[bin]]
name = "perro-lsp"
path = "src/main.rs"
