[package]
name = "perro_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
natord = "1.0" # natural sorting for versions
eframe = "0.27" # egui + native runner
egui = "0.27"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59.0", features = ["Win32_System_Console"] }

[[bin]]
name = "Perro"
path = "src/main.rs"
