[package]
name = "perro_runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_core = { path = "../perro_core" }
winit = { version = "0.30.8" }
env_logger = {version = "0.11.5"}
log = { version = "0.4.22"}
pollster = {version ="0.4.0"}
uuid = { version = "1.4", features = ["serde", "v4"] }

toml = "0.8"
libloading = "0.8"


[[bin]]
name = "perro_runtime"
path = "src/main.rs"

[profile.release]
opt-level = 3            # max speed
lto = "fat"              # full link-time optimization
codegen-units = 1        # full cross-crate optimization
panic = "abort"          # remove unwinding overhead
debug = false            # no debug info
strip = "symbols"        # strip symbols from final binary

# Per-crate tweaks (only opt-level, debug, overflow-checks allowed here)
[profile.release.package."*"]
opt-level = 3
debug = false
overflow-checks = false

[target.'cfg(windows)']
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS"]
