[package]
name = "perro_website"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[lib]
name = "perro_website_lib"
crate-type = ["cdylib", "rlib"]

[features]
default = ["ssr"]
hydrate = [
    "leptos/hydrate",
    "dep:wasm-bindgen",
]
ssr = [
    "dep:axum",
    "dep:leptos_axum",
    "dep:tokio",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "leptos/ssr",
    "leptos_router/ssr",
]

[lints]
workspace = true

[dependencies]
leptos = { version = "0.8.12", default-features = false }
leptos_meta = { version = "0.8.6", default-features = false }
leptos_router = { version = "0.8.10", default-features = false }
pulldown-cmark = "0.13.4"
perro_nodes.workspace = true
perro_scene.workspace = true
resvg = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = { version = "0.2.121", optional = true }

axum = { version = "0.8.7", optional = true }
leptos_axum = { version = "0.8.7", optional = true }
tokio = { version = "1.48", features = ["rt-multi-thread", "macros"], optional = true }
tower-http = { version = "0.6.7", features = ["fs"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true, features = ["env-filter"] }

[build-dependencies]
perro_compiler.workspace = true
pulldown-cmark = "0.13.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[package.metadata.leptos]
output-name = "perro_website"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.css"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
lib-features = ["hydrate"]
