[workspace]

[package]
name = "perro_project"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_ids = "0.1.0"
perro_scripting = "0.1.0"
perro_api = "0.1.0"
perro_core = "0.1.0"
scripts = { path = "../scripts" }

[patch.crates-io]
perro_api = { path = "C:/Users/super/Perro/perro_api" }
perro_core = { path = "C:/Users/super/Perro/perro_core" }
perro_ids = { path = "C:/Users/super/Perro/perro_ids" }
perro_scripting = { path = "C:/Users/super/Perro/perro_scripting" }
perro_variant = { path = "C:/Users/super/Perro/perro_variant" }
