[workspace]

[package]
name = "perro_editor"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
perro_core = { path = "../../../perro_core" }
scripts = { path = "../scripts" }

winit = { version = "0.30.8" }
uuid = { version = "1.4", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = {version = "0.11.5"}

[build-dependencies]
toml = "0.8"
embed-resource = "2.4"
image = "0.24"
ico = "0.3"
chrono = "0.4"

[[bin]]
name = "Perro"
path = "src/main.rs"

[target.'cfg(windows)']
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS"]
