[workspace]

[package]
name = "Perro_Engine"
version = "0.1.0"
edition = "2024"
build = "build.rs"


[dependencies]
perro_core = { path = "../../../perro_core" }
scripts = { path = "../scripts" }

winit = { version = "0.30.8" }
uuid = { version = "1.4", features = ["serde", "v4"] }
serde = { version = "1.0", features = ["derive","rc"] }
serde_json = "1.0"
anyhow = "1.0"
env_logger = {version = "0.11.5"}


[build-dependencies]
toml = "0.8"
embed-resource = "2.4"
image = "0.24"
ico = "0.3"
chrono = "0.4"

resvg = "0.44"

[[bin]]
name = "Perro_Engine"
path = "src/main.rs"

[profile.release]
opt-level = 3            # max speed
lto = "fat"              # full link-time optimization
codegen-units = 1        # full cross-crate optimization
panic = "abort"          # remove unwinding overhead
debug = false            # no debug info
strip = "symbols"        # strip symbols from final binary

# Per-crate tweaks (only opt-level, debug, overflow-checks allowed here)
[profile.release.package."*"]
opt-level = 3
debug = false
overflow-checks = false



[target.'cfg(windows)']
rustflags = ["-C", "link-args=/SUBSYSTEM:WINDOWS"]
