[package]
name = "perro_api"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_ids = { path = "../../core/perro_ids" }
perro_input_api = { path = "../perro_input_api" }
perro_project = { path = "../../runtime_project/perro_project" }
perro_resource_api = { path = "../perro_resource_api" }
perro_runtime_api = { path = "../perro_runtime_api" }
perro_scene = { path = "../../runtime_project/perro_scene" }
perro_scripting = { path = "../../script_stack/perro_scripting" }
perro_steamworks = { path = "../perro_steamworks", default-features = false, optional = true }
perro_nodes = { path = "../../core/perro_nodes" }
perro_structs = { path = "../../core/perro_structs" }
perro_ui = { path = "../../core/perro_ui" }
perro_modules = { path = "../perro_modules" }
perro_variant = { path = "../../core/perro_variant" }

[features]
steamworks = ["dep:perro_steamworks", "perro_steamworks/steamworks-runtime"]
