[package]
name = "perro_api"
version = "0.1.0"
edition = "2024"

[dependencies]
perro_ids.workspace = true
perro_input_api.workspace = true
perro_project.workspace = true
perro_resource_api.workspace = true
perro_runtime_api.workspace = true
perro_scene.workspace = true
perro_scripting.workspace = true
perro_steamworks = { workspace = true, optional = true }
perro_nodes.workspace = true
perro_structs.workspace = true
perro_ui.workspace = true
perro_modules.workspace = true
perro_networking.workspace = true
perro_variant.workspace = true
perro_csv.workspace = true
[features]
steamworks = ["dep:perro_steamworks", "perro_steamworks/steamworks-runtime"]
