[package]
name = "perro_modules"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
serde_json = "1.0.149"
perro_ids = { path = "../../core/perro_ids" }
perro_variant = { path = "../../core/perro_variant" }
perro_io = { path = "../../io_stack/perro_io" }
perro_resource_api = { path = "../perro_resource_api" }
