[package]
name = "perro_modules"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[lints]
workspace = true

[dependencies]
serde_json = "1.0.149"
perro_variant.workspace = true
perro_io.workspace = true
perro_resource_api.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rfd = "0.15"
