[package]
name = "perro_networking"
version = "0.1.0"
edition = "2024"

[features]
network-tests = []

[dependencies]
bytes = "1"
serde_json = "1.0.149"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync"] }
tungstenite = "0.29.0"
ureq = { version = "3.3.0", features = ["cookies", "platform-verifier", "native-tls", "socks-proxy"] }
webrtc = "0.17.1"
perro_ids = { path = "../../core/perro_ids" }
perro_io = { path = "../../io_stack/perro_io" }
perro_variant = { path = "../../core/perro_variant" }
