[package]
name = "perro_networking"
version = "0.1.0"
edition = "2024"

[features]
network-tests = []
steamworks = ["dep:perro_steamworks", "perro_steamworks/steamworks-runtime"]

[dependencies]
perro_ids.workspace = true
perro_io.workspace = true
perro_modules.workspace = true
perro_steamworks = { workspace = true, optional = true }
perro_variant.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
get_if_addrs = "0.5.3"
serde_json = "1.0.149"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "sync"] }
tungstenite = "0.29.0"
ureq = { version = "3.3.0", default-features = false, features = ["cookies", "gzip", "native-tls", "platform-verifier", "rustls", "socks-proxy"] }
# cookie 0.18.1 fails with time 0.3.48 in generated standalone crates.
time = "=0.3.47"
